--- a/covid-19.html
+++ b/covid-19.html
@@ -34,7 +34,7 @@
 
 /* Set height of body and the document to 100% */
 body, html {
-  height: 80%;
+  height: 100%;
   margin: 0;
   font-family: Arial;
 }
@@ -61,17 +61,7 @@ body, html {
   color: black;
   display: none;
   padding: 100px 20px;
-  height: 80%;
-}
-
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
-.sticky + .content {
-  padding-top: 60px;
+  height: 100%;
 }
 
 #Home {background-color: white;}
@@ -79,310 +69,114 @@ body, html {
 #Contact {background-color: white;}
 #About {background-color: white;}
 
-body {
-  background-color: #ffffff;
-  overflow-x: hidden;
-}
-.base {
-  z-index: 90;
+.sidenav {
+  height: 100%;
+  width: 0;
   position: fixed;
-  top: 0px;
-  left: 0px;
-  background-color: #FFFFFF;
-  width: 98px;
-  height: 98px;
-  transition: all 1s cubic-bezier(0.5, -0.75, 0.05, 1);
-  border-bottom-right-radius: 100%;
-}
-.base .menu {
-  z-index: 100;
-  background-color: #FFFFFF;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 100px;
-  height: 100px;
-  border-bottom-right-radius: 200px;
-  cursor: pointer;
-  transition: all 1s cubic-bezier(0.5, -0.75, 0.05, 1), background-color 1s ease;
-}
-.base .menu .icon {
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-100%, -100%);
-}
-.base .menu .icon:before, .base .menu .icon:after {
-  content: '';
-  transform: rotate(0deg);
-  transition: top 0.5s ease 0.5s, transform 0.5s ease, background-color 0.75s ease 0.25s;
-}
-.base .menu .icon .bar, .base .menu .icon:before, .base .menu .icon:after {
-  position: absolute;
-  height: 5px;
-  left: 0px;
-  right: 0px;
-  border-radius: 5px;
-  background-color: #21264B;
-}
-.base .menu .icon .bar {
-  transition: opacity 0s linear 0.5s, background-color 0.75s ease 0.25s;
-  opacity: 1;
-  top: 10px;
-}
-.base .menu .icon:before {
-  top: 0px;
-}
-.base .menu .icon:after {
-  top: initial;
-  top: 20px;
-}
-.base .icons {
-  z-index: 98;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-}
-.base .icons > * {
-  position: absolute;
-  font-size: 40px;
-  color: #21264B;
-  transition: 0.3s cubic-bezier(0.5, -0.25, 0.05, 1);
-}
-.base .icons .fa-user {
-  top: 35px;
-  left: 0px;
-  transition-delay: 0.2s;
-}
-.base .icons .fa-calendar-o {
-  top: 0px;
-  left: 0px;
-  color: #fff;
-  transition-delay: 0.1s;
-}
-.base .icons .fa-tachometer {
-  top: 0px;
-  left: 35px;
-}
-.base .section {
-  z-index: 96;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  height: 0px;
-  width: 0px;
-  transform-origin: 100% 100%;
-  transform: rotate(135deg);
-}
-.base .section .cover1 {
-  transform-origin: 100% 100%;
-}
-.base .section .cover1, .base .section .cover1 .cover2, .base .section .cover1 .cover2 .content {
-  position: absolute;
-  width: 600px;
-  height: 600px;
-}
-.base .section .cover1, .base .section .cover1 .cover2 {
-  top: 50%;
-  left: 50%;
-  transform: translate(-100%, -100%) rotate(4deg);
-  overflow: hidden;
-  pointer-events: none;
-  transition: transform 0.5s ease-in;
-}
-.base .section .cover1 .cover2 {
-  transform: translate(50%, -50%) rotate(-8deg);
-  transform-origin: 0% 100%;
-}
-.base .section .cover1 .cover2 .content {
-  width: 150px;
-  height: 150px;
-  border-radius: 100%;
-  background-color: #EE1B59;
-  top: 100%;
-  left: 0%;
-  transform: translate(-50%, -50%);
-  transition: background-color 0s, width 1.5s cubic-bezier(0.5, -0.5, 0.05, 1) 0s, height 1.5s cubic-bezier(0.5, -0.5, 0.05, 1) 0s;
-  pointer-events: auto;
-}
-.base .section-static {
-  z-index: 94;
-  width: 100px;
-  height: 100px;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  transform-origin: 0% 0%;
-  transition: width 1s cubic-bezier(0.5, -0.75, 0.05, 1), height 1s cubic-bezier(0.5, -0.75, 0.05, 1);
-}
-.base .section-static:hover {
-  background-color: #EAEAEA;
-}
-.base .section-static.top {
-  transform: rotate(-45deg);
-  border-bottom-right-radius: 400px;
-}
-.base .section-static.bottom {
-  transform: rotate(45deg);
-  border-bottom-right-radius: 400px;
-}
-.base.close {
-  width: 300px;
-  height: 300px;
-  transition: all 1.25s cubic-bezier(0.5, 0, 0.05, 1.75);
-}
-.base.close .menu {
-  width: 150px;
-  height: 150px;
-  transition: all 1s cubic-bezier(0.5, 0, 0.05, 1.75), background-color 1s ease;
-  background-color: #21264B;
-}
-.base.close .menu .icon .bar, .base.close .menu .icon:before, .base.close .menu .icon:after {
-  background-color: #FFFFFF;
-}
-.base.close .menu .icon .bar {
-  opacity: 0;
-}
-.base.close .menu .icon:before, .base.close .menu .icon:after {
-  transition: top 0.5s linear, transform 0.5s ease 0.5s, background-color 0.75s ease 0.25s;
-}
-.base.close .menu .icon:before {
-  top: 10px;
-  transform: rotate(-45deg);
-}
-.base.close .menu .icon:after {
-  top: 10px;
-  transform: rotate(45deg);
-}
-.base.close .icons {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-}
-.base.close .icons > * {
-  position: absolute;
-  font-size: 40px;
-  color: #21264B;
-  transition: 0.3s cubic-bezier(0.5, 0, 0.05, 1.75) 0.7s;
-  pointer-events: none;
-}
-.base.close .icons .fa-user {
-  top: 35px;
-  left: 200px;
-}
-.base.close .icons .fa-calendar-o {
-  top: 141px;
-  left: 141px;
-  color: #fff;
-  transition-delay: 0.65s;
-}
-.base.close .icons .fa-tachometer {
-  top: 200px;
-  left: 35px;
-  transition-delay: 0.8s;
-}
-.base.close .section .cover1 {
-  transform-origin: 100% 100%;
-}
-.base.close .section .cover1, .base.close .section .cover1 .cover2, .base.close .section .cover1 .cover2 .content {
-  position: absolute;
-  width: 600px;
-  height: 600px;
-}
-.base.close .section .cover1, .base.close .section .cover1 .cover2 {
-  top: 50%;
-  left: 50%;
-  transform: translate(-100%, -100%) rotate(16deg);
-  overflow: hidden;
-  transition: transform 0.5s ease-in 0.5s;
-}
-.base.close .section .cover1 .cover2 {
-  transform: translate(50%, -50%) rotate(-32deg);
-  transform-origin: 0% 100%;
-}
-.base.close .section .cover1 .cover2 .content {
-  border-radius: 100%;
-  background-color: #EE1B59;
-  top: 100%;
-  left: 0%;
-  transform: translate(-50%, -50%);
-  transition: background-color 0s, width 1.1s cubic-bezier(0.5, 0, 0.05, 1.75) 0.25s, height 1.1s cubic-bezier(0.5, 0, 0.05, 2) 0.25s;
-}
-.base.close .section .cover1 .cover2 .content:hover {
-  background-color: #DD1350;
-}
-.base.close .section-static {
-  width: 300px;
-  height: 300px;
-  transition: width 1.25s cubic-bezier(0.5, 0, 0.05, 2), height 1.25s cubic-bezier(0.5, 0, 0.05, 2);
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
 }
 
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+#main {
+  transition: margin-left .5s;
+  padding: 16px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
 
 </style>
 </head>
 <body>
-<div class="base">
-   <div class="menu">
-      <div class="icon">
-         <a class="bar" <a class="section-static bottom" href="https://ukkdosm.github.io/blog/"></a>
-      </div>
-   </div>
-   <div class="icons">
-      <i class="fa fa-user" aria-hidden="true"></i>
-      <i class="fa fa-calendar-o" aria-hidden="true"></i>
-      <i class="fa fa-tachometer" aria-hidden="true"></i>
-   </div>
-   <div class="section">
-      <div class="cover1">
-         <div class="cover2">
-            <a class="content" href="#calender"></a>
-         </div>
-      </div>
-   </div>
-   <a class="section-static top" href="#profile"></a>
-   <a class="section-static bottom" href="https://ukkdosm.github.io/blog/"></a>
+
+<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="https://ukkdosm.github.io/" >Home</a>
+  <a href="https://ukkdosm.github.io/blog/">Blog</a>
+  <a href="https://www.dosm.gov.my/v1/index.php">DOSM</a>
+  <a href="#">Our Project</a>
 </div>
 
-<center>
-<img src="https://lh3.googleusercontent.com/-XuCdKUrFSBo/XoFdP4WkFqI/AAAAAAAA1z8/yAqGOs27SMMBUQ5F49lSwGwQVtTBCKGHACK8BGAsYHg/s0/2020-03-29.png" alt="BannerCovid-19ENG" width="100%" >
-</center>
-<button class="tablink" onclick="openPage('Home', this, 'purple')" id="defaultOpen" >Overview</button>
-<button class="tablink" onclick="openPage('News', this, 'orange')" >Cases</button>
-<button class="tablink" onclick="openPage('Contact', this, 'blue')">Interactive</button>
-<button class="tablink" onclick="openPage('About', this, 'red')">World</button>
+<div id="main">
+  <span style="font-size:18px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
+</div>
 
-<div id="Home" class="tabcontent">  
-  <center><iframe width="95%" height="1800" src="https://datastudio.google.com/embed/reporting/cfca4946-cfc8-4fb4-804f-bb58aa6c35ca/page/1M" frameborder="0" style="border:0" allowfullscreen></iframe></div>
-</div></center>
+<img src="https://lh3.googleusercontent.com/-XuCdKUrFSBo/XoFdP4WkFqI/AAAAAAAA1z8/yAqGOs27SMMBUQ5F49lSwGwQVtTBCKGHACK8BGAsYHg/s0/2020-03-29.png" alt="BannerCovid-19ENG" width="100%" >
+
+<button class="tablink" onclick="openPage('Home', this, 'red')"id="defaultOpen">Overview</button>
+<button class="tablink" onclick="openPage('News', this, 'green')" >Cases</button>
+<button class="tablink" onclick="openPage('Contact', this, 'blue')">Interactive</button>
+<button class="tablink" onclick="openPage('About', this, 'orange')">World</button>
+
+<div id="Home" class="tabcontent">
+  <p><iframe width="100%" height="1800" src="https://datastudio.google.com/embed/reporting/cfca4946-cfc8-4fb4-804f-bb58aa6c35ca/page/1M" frameborder="0" style="border:0" allowfullscreen></iframe></p>
+</div>
 
 <div id="News" class="tabcontent">
-<center><iframe title="CoViD-19 Cases Performance" aria-label="Line Chart" src="//datawrapper.dwcdn.net/5Fzxn/14/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="600"></iframe>
-		<br>
-		<iframe title="CoVID-19 in Malaysia by State" aria-label="Interactive line chart" src="//datawrapper.dwcdn.net/AT19Z/19/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="600"></iframe>
-<br>
-		<iframe width="100%" height="600" src="https://ukkdosm.github.io/maps/HC-malaysia.html" frameborder="0" style="border:0" allowfullscreen></iframe>
+  <p><iframe title="CoViD-19 Cases Performance" aria-label="Line Chart" src="//datawrapper.dwcdn.net/5Fzxn/14/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="600"></iframe>
+            <br>
+            <iframe title="CoVID-19 in Malaysia by State" aria-label="Interactive line chart" src="//datawrapper.dwcdn.net/AT19Z/19/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="600"></iframe>
+            <br>
+            <iframe width="100%" height="600" src="https://ukkdosm.github.io/maps/HC-malaysia.html" frameborder="0" style="border:0" allowfullscreen></iframe>
+</p> 
+</div>
 
-</center></div><br><br>
-	
 <div id="Contact" class="tabcontent">
-    <center>
-	<div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1810094"><script src="https://public.flourish.studio/resources/embed.js"></script><p style="font-size:14px">by Amerudin Abdul Ghani, BPPD</p></div>
-	<div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1777563"><script src="https://public.flourish.studio/resources/embed.js"></script><p style="font-size:14px"</div>
-	<div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1777629"><script src="https://public.flourish.studio/resources/embed.js"></script><p style="font-size:14px"</div>
-  
-	    <center><h3>Heatmap CoViD-19 Cases Reported in Malaysia</h3>
-	  <iframe width="100%" height="600" src="https://ukkdosm.github.io/maps/heatmap-covid.html" frameborder="0" style="border:0" allowfullscreen></iframe>
-	  <p style="font-size:14px">Source: Crisis Preparedness and Response Centre, KKM.</p><br>
-  
-	  <iframe title="Reported patient location CoVID-19 in Malaysia" aria-label="Malaysia state Symbol map" src="//datawrapper.dwcdn.net/tcfj8/2/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="604"></iframe>
-  	<p style="font-size:14px">Source: Crisis Preparedness and Response Centre, KKM.</p><br><br>
-	</center>
-	    </div></center>
+  <p><center>
+            <div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1810094">
+                <script src="https://public.flourish.studio/resources/embed.js"></script>
+                <p style="font-size:14px">by Amerudin Abdul Ghani, BPPD</p>
+            </div>
+            <div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1777563">
+                <script src="https://public.flourish.studio/resources/embed.js"></script>
+                <p style="font-size:14px" </div>
+                    <div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1777629">
+                        <script src="https://public.flourish.studio/resources/embed.js"></script>
+                        <p style="font-size:14px" </div>
+
+                            <center>
+                                <h3>Heatmap CoViD-19 Cases Reported in Malaysia</h3>
+                                <iframe width="100%" height="600" src="https://ukkdosm.github.io/maps/heatmap-covid.html" frameborder="0" style="border:0" allowfullscreen></iframe>
+                                <p style="font-size:14px">Source: Crisis Preparedness and Response Centre, KKM.</p><br>
+
+                                <iframe title="Reported patient location CoVID-19 in Malaysia" aria-label="Malaysia state Symbol map" src="//datawrapper.dwcdn.net/tcfj8/2/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="604"></iframe>
+                                <p style="font-size:14px">Source: Crisis Preparedness and Response Centre, KKM.</p><br><br>
+                            </center>
+                    </div>
+        </center></p>
+</div>
 
 <div id="About" class="tabcontent">
-	<center><iframe width="95%" height="3400" src="https://datastudio.google.com/embed/u/0/reporting/f56febd8-5c42-4191-bcea-87a3396f4508/page/GQFJB" frameborder="0" style="border:0" allowfullscreen></iframe></div>
+  <p><iframe width="100%" height="3400" src="https://datastudio.google.com/embed/u/0/reporting/f56febd8-5c42-4191-bcea-87a3396f4508/page/GQFJB" frameborder="0" style="border:0" allowfullscreen></iframe></p>
+</div>
 
 <script>
 function openPage(pageName,elmnt,color) {
@@ -402,29 +196,17 @@ function openPage(pageName,elmnt,color) {
 // Get the element with id="defaultOpen" and click on it
 document.getElementById("defaultOpen").click();
 
-$(".menu").click(function(){
-   $(this).parent().toggleClass("close");
-});
-
-//Based on: https://dribbble.com/shots/3377940-Home-Budget-App-Interactions
-
-</script>
-
-<style>
-.footer {
-   position: fixed;
-   left: 0;
-   bottom: 0;
-   width: 100%;
-   background-color: #ddd;
-   color: white;
-   text-align: center;
+function openNav() {
+  document.getElementById("mySidenav").style.width = "250px";
+  document.getElementById("main").style.marginLeft = "250px";
 }
 
-</style>
+function closeNav() {
+  document.getElementById("mySidenav").style.width = "0";
+  document.getElementById("main").style.marginLeft= "0";
+}
 
-<div class="footer">
-  <p style="font-size:14px"> Created by ©UKK DOSM Copyright © 2020.</p>
-</div>
+</script>
+   
 </body>
 </html> 
