--- a/covid-19.html
+++ b/covid-19.html
@@ -141,9 +141,7 @@ body, html {
 </div>
 
 <div id="News" class="tabcontent">
-  <p><iframe title="COVID-19 New Cases - Recovery" aria-label="Line Chart" src="https://public.tableau.com/views/COVID-19Performance/byRecovery?:display_count=y&:origin=viz_share_link" scrolling="no" frameborder="0" style="border: none;" width="100%" height="600"></iframe>
-	  <br>
-	  <iframe title="CoViD-19 Cases Performance" aria-label="Line Chart" src="//datawrapper.dwcdn.net/5Fzxn/14/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="600"></iframe>
+  <p><iframe title="CoViD-19 Cases Performance" aria-label="Line Chart" src="//datawrapper.dwcdn.net/5Fzxn/14/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="600"></iframe>
             <br>
             <iframe title="CoVID-19 in Malaysia by State" aria-label="Interactive line chart" src="//datawrapper.dwcdn.net/AT19Z/19/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="600"></iframe>
             <br>
