--- a/covid-19.html
+++ b/covid-19.html
@@ -15,7 +15,10 @@
 		<link rel="shortcut icon" type="image/x-icon" href="https://ukkdosm.github.io/blog/assets/images/favicon.ico">
 		<link href="https://fonts.googleapis.com/css?family=Heebo:400,500,700|Fira+Sans:600" rel="stylesheet">
 		<link rel="stylesheet" href="dist/css/style.css">
-    
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js">    
+	
 	<script src="https://unpkg.com/animejs@2.2.0/anime.min.js"></script>
 	<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 	<script src="lazysizes.min.js" async></script>
@@ -122,8 +125,38 @@ body, html {
   <a href="https://ukkdosm.github.io/" >Home</a>
   <a href="https://ukkdosm.github.io/blog/">Blog</a>
   <a href="https://www.dosm.gov.my/v1/index.php">DOSM</a>
-  <a href="#">Our Project</a>
+  <div class="container">
+  <!-- Trigger the modal with a button -->
+  <button type="button" class="btn btn-lg" data-toggle="modal" data-target="#myModal">  Credits</button>
+
 </div>
+</div>
+
+<!-- Modal -->
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Credits</h4>
+        </div>
+        <div class="modal-body">
+          <h3>UKK DOSM, COVID-19 Project </h3><br>
+		  <p>	
+				<strong>Project lead:</strong> En Azmi Ali & Najmi Ariffin<hr>
+				<strong>Content:</strong> Fatin Ezzati, Nurul Aishah & Adib Azri<hr>
+				<strong>UX Design & Illustration:</strong> Najmi Ariffin<hr>
+				<strong>Contribution:</strong> Goh Kok Han (Data Engineer, DIGI), Ameruddin & Huda Sani <hr>
+				<strong>SOURCE:</strong><br><i> Crisis Preparedness and Response Center (CPRC), 
+						Malaysian Ministry of Health (MOH)</i></p>
+				
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 <div id="main">
   <span style="font-size:18px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
@@ -151,14 +184,14 @@ body, html {
 
 <div id="Contact" class="tabcontent">
   <p><center>
-            <div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1810094">
+            <div width="100%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1810094">
                 <script src="https://public.flourish.studio/resources/embed.js"></script>
                 <p style="font-size:14px">by Amerudin Abdul Ghani, BPPD</p>
             </div>
-            <div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1777563">
+            <div width="100%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1777563">
                 <script src="https://public.flourish.studio/resources/embed.js"></script>
                 <p style="font-size:14px" </div>
-                    <div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1777629">
+                    <div width="100%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1777629">
                         <script src="https://public.flourish.studio/resources/embed.js"></script>
                         <p style="font-size:14px" </div>
 
