--- a/covid-19.html
+++ b/covid-19.html
@@ -122,10 +122,9 @@ body, html {
 
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="https://ukkdosm.github.io/" >Home</a>
-  <a href="https://ukkdosm.github.io/blog/">Blog</a>
+  <a href="https://ukkdosm.github.io/blog/" >Home</a>
+  <a href="https://ukkdosm.github.io/malaysia">Comparison</a>
   <a href="https://www.dosm.gov.my/v1/index.php">DOSM</a>
-  <a href="https://ukkdosm.github.io/malaysia">Comparison</a>	
   <div class="container">
   <!-- Trigger the modal with a button -->
   <button type="button" class="btn btn-lg" data-toggle="modal" data-target="#myModal">  Credits</button>
