--- a/covid-19.html
+++ b/covid-19.html
@@ -180,10 +180,7 @@ body, html {
             <br>
             <iframe width="100%" height="600" src="https://ukkdosm.github.io/maps/HC-malaysia.html" frameborder="0" style="border:0" allowfullscreen></iframe>
 	    <br>
-	  <!-- JS file to enable the JavaScript API. You can point at the version on public.tableau.com, online.tableau.com, or your on-prem Server -->
-		<script src="https://www.example.com/javascripts/api/tableau-2.js"></script>
-	<!-- Empty div where the viz will be placed -->
-<div id="tableauViz"></div>
+	    <iframe src="https://public.tableau.com/views/COVID-19Performance/byCases?:showVizHome=no&:embed=true" width="645" height="955"></iframe>
 	</p> 
 </div>
 
@@ -244,20 +241,6 @@ function closeNav() {
   document.getElementById("main").style.marginLeft= "0";
 }
 
-	function initializeViz() {
-  // JS object that points at empty div in the html
-  var placeholderDiv = document.getElementById("tableauViz");
-  // URL of the viz to be embedded
-  var url = "https://public.tableau.com/profile/najmi.ariffin#!/vizhome/COVID-19Performance/byCases";
-  // An object that contains options specifying how to embed the viz
-  var options = {
-    width: '600px',
-    height: '600px',
-    hideTabs: true,
-    hideToolbar: true,
-  };
-  viz = new tableau.Viz(placeholderDiv, url, options);
-}
 </script>
    
 </body>
