--- a/covid-19.html
+++ b/covid-19.html
@@ -180,7 +180,9 @@ body, html {
             <br>
             <iframe width="100%" height="600" src="https://ukkdosm.github.io/maps/HC-malaysia.html" frameborder="0" style="border:0" allowfullscreen></iframe>
 	    <br>
-	    <iframe src="https://public.tableau.com/views/COVID-19Performance/byCases?:showVizHome=no&:embed=true" width="100%" height="540"></iframe>
+	    <iframe src="https://public.tableau.com/views/COVID-19Performance/byCases?:showVizHome=no&:embed=true" width="100%" height="540" frameborder="0" style="border:0"></iframe>
+	  <br>
+	    <iframe src="https://public.tableau.com/views/COVID-19Performance/by?:showVizHome=no&:embed=true" width="100%" height="540" frameborder="0" style="border:0"></iframe>
 	</p> 
 </div>
 
