--- a/covid-19.html
+++ b/covid-19.html
@@ -174,7 +174,8 @@ body, html {
 </div>
 
 <div id="News" class="tabcontent">
-  <center><iframe width="600" height="400" frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT6C2FiXaoHBk1t85LgWzviqnecQwheGLHRaQI9FW4vggMLQ_GmrD_QBAHzQ_WtuNmS4YWcKcNGfWK1/pubchart?oid=934330152&amp;format=interactive"></center>
+  <p>
+	  <center><iframe width="600" height="400" src="https://docs.google.com/spreadsheets/u/5/d/e/2PACX-1vT6C2FiXaoHBk1t85LgWzviqnecQwheGLHRaQI9FW4vggMLQ_GmrD_QBAHzQ_WtuNmS4YWcKcNGfWK1/pubchart?oid=934330152"></center>
             <br>
             <iframe width="100%" height="600" src="https://ukkdosm.github.io/maps/HC-malaysia.html" frameborder="0" style="border:0" allowfullscreen></iframe>
 	    <br>
