--- a/covid-19.html
+++ b/covid-19.html
@@ -199,9 +199,9 @@ body, html {
                         <p style="font-size:14px" </div>
 
                             <center>
-                                <h3>Heatmap CoViD-19 Cases Reported in Malaysia</h3>
-                                <iframe width="100%" height="600" src="https://ukkdosm.github.io/maps/heatmap-covid.html" frameborder="0" style="border:0" allowfullscreen></iframe>
-                                <p style="font-size:14px">Source: Crisis Preparedness and Response Centre, KKM.</p><br>
+                                <!--<h3>Heatmap CoViD-19 Cases Reported in Malaysia</h3>
+                                <iframe width="100%" height="600" src="#" frameborder="0" style="border:0" allowfullscreen></iframe>
+                                <p style="font-size:14px">Source: Crisis Preparedness and Response Centre, KKM.</p><br>//-->
 
                                 <iframe title="Reported patient location CoVID-19 in Malaysia" aria-label="Malaysia state Symbol map" src="//datawrapper.dwcdn.net/tcfj8/2/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="604"></iframe>
                                 <p style="font-size:14px">Source: Crisis Preparedness and Response Centre, KKM.</p><br><br>
