--- a/covid-19.html
+++ b/covid-19.html
@@ -177,11 +177,11 @@ body, html {
   <p>
 	  <center><iframe width="826" height="511" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT6C2FiXaoHBk1t85LgWzviqnecQwheGLHRaQI9FW4vggMLQ_GmrD_QBAHzQ_WtuNmS4YWcKcNGfWK1/pubchart?oid=934330152&amp;format=interactive"></iframe></center>
             <br>
-            <iframe width="100%" height="600" src="https://ukkdosm.github.io/maps/HC-malaysia.html" frameborder="0" style="border:0" allowfullscreen></iframe>
-	    <br>
-	    <iframe src="https://public.tableau.com/views/COVID-19Performance/byCases?:showVizHome=no&:embed=true" width="100%" height="540" frameborder="0" style="border:0"></iframe>
+	  <iframe width="600" height="511" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT6C2FiXaoHBk1t85LgWzviqnecQwheGLHRaQI9FW4vggMLQ_GmrD_QBAHzQ_WtuNmS4YWcKcNGfWK1/pubchart?oid=555449063&amp;format=interactive"></iframe>
+	  <iframe width="600" height="511"" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT6C2FiXaoHBk1t85LgWzviqnecQwheGLHRaQI9FW4vggMLQ_GmrD_QBAHzQ_WtuNmS4YWcKcNGfWK1/pubchart?oid=1809011918&amp;format=interactive"></iframe>
 	  <br>
-	    <iframe src="https://public.tableau.com/views/COVID-19Performance/by?:showVizHome=no&:embed=true" width="100%" height="540" frameborder="0" style="border:0"></iframe>
+	  <iframe width="100%" height="600" src="https://ukkdosm.github.io/maps/HC-malaysia.html" frameborder="0" style="border:0" allowfullscreen></iframe>
+	    <br>	    
 	</p> 
 </div>
 
