--- a/covid-19.html
+++ b/covid-19.html
@@ -178,7 +178,6 @@ body, html {
 	  <iframe width="600" height="400" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT6C2FiXaoHBk1t85LgWzviqnecQwheGLHRaQI9FW4vggMLQ_GmrD_QBAHzQ_WtuNmS4YWcKcNGfWK1/pubchart?oid=934330152&amp;format=interactive"></iframe>
           	  <iframe width="600" height="400" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT6C2FiXaoHBk1t85LgWzviqnecQwheGLHRaQI9FW4vggMLQ_GmrD_QBAHzQ_WtuNmS4YWcKcNGfWK1/pubchart?oid=1809011918&amp;format=interactive"></iframe>
 		  <iframe width="997.5584207601672" height="406.07476697489653" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT6C2FiXaoHBk1t85LgWzviqnecQwheGLHRaQI9FW4vggMLQ_GmrD_QBAHzQ_WtuNmS4YWcKcNGfWK1/pubchart?oid=555449063&amp;format=interactive"></iframe>
-	  	  <iframe width="100%" height="600" src="https://ukkdosm.github.io/maps/HC-malaysia.html" frameborder="0" style="border:0" allowfullscreen></iframe></center>
 	    <br>	    
 	</p> 
 </div>
@@ -197,7 +196,8 @@ body, html {
                         <p style="font-size:14px" </div>
 
                             <center>
-                                <!--<h3>Heatmap CoViD-19 Cases Reported in Malaysia</h3>
+                                <iframe width="100%" height="600" src="https://ukkdosm.github.io/maps/HC-malaysia.html" frameborder="0" style="border:0" allowfullscreen></iframe>
+				    <!--<h3>Heatmap CoViD-19 Cases Reported in Malaysia</h3>
                                 <iframe width="100%" height="600" src="#" frameborder="0" style="border:0" allowfullscreen></iframe>
                                 <p style="font-size:14px">Source: Crisis Preparedness and Response Centre, KKM.</p><br>//-->
 
