--- a/covid-19.html
+++ b/covid-19.html
@@ -209,7 +209,9 @@ body, html {
 </div>
 
 <div id="About" class="tabcontent">
-  <p><iframe width="100%" height="3400" src="https://datastudio.google.com/embed/u/0/reporting/f56febd8-5c42-4191-bcea-87a3396f4508/page/GQFJB" frameborder="0" style="border:0" allowfullscreen></iframe></p>
+  <p><iframe width="100%" height="3400"
+src="https://datastudio.google.com/embed/reporting/fe151f08-d609-4226-8610-7d6e6c56d217/page/GQFJB"
+frameborder="0" style="border:0" allowfullscreen></iframe></p>
 </div>
 
 <script>
