--- a/covid-19.html
+++ b/covid-19.html
@@ -177,8 +177,13 @@ body, html {
   <p>
 	  <iframe width="600" height="400" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT6C2FiXaoHBk1t85LgWzviqnecQwheGLHRaQI9FW4vggMLQ_GmrD_QBAHzQ_WtuNmS4YWcKcNGfWK1/pubchart?oid=934330152&amp;format=interactive"></iframe>
           	  <iframe width="600" height="400" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT6C2FiXaoHBk1t85LgWzviqnecQwheGLHRaQI9FW4vggMLQ_GmrD_QBAHzQ_WtuNmS4YWcKcNGfWK1/pubchart?oid=1809011918&amp;format=interactive"></iframe>
-		  <iframe width="997.5584207601672" height="406.07476697489653" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT6C2FiXaoHBk1t85LgWzviqnecQwheGLHRaQI9FW4vggMLQ_GmrD_QBAHzQ_WtuNmS4YWcKcNGfWK1/pubchart?oid=555449063&amp;format=interactive"></iframe>
-	    <br>	    
+		  <center><iframe width="900" height="400" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT6C2FiXaoHBk1t85LgWzviqnecQwheGLHRaQI9FW4vggMLQ_GmrD_QBAHzQ_WtuNmS4YWcKcNGfWK1/pubchart?oid=555449063&amp;format=interactive"></iframe></center>
+		  <br>
+		  <iframe src='https://flo.uri.sh/visualisation/1985060/embed' frameborder='0' scrolling='no' style='width:600px;height:400px;'></iframe>
+		  <iframe src='https://flo.uri.sh/visualisation/1797801/embed' frameborder='0' scrolling='no' style='width:600px;height:400px;'></iframe></center>
+		<br>
+	    <center><iframe src='https://flo.uri.sh/visualisation/1993601/embed' frameborder='0' scrolling='no' style='width:1000px;height:600px;'></iframe>
+		  <iframe src='https://flo.uri.sh/visualisation/1993540/embed' frameborder='0' scrolling='no' style='width:1000px;height:600px;'></iframe></center>
 	</p> 
 </div>
 
