--- a/covid-19.html
+++ b/covid-19.html
@@ -170,7 +170,7 @@ body, html {
 <button class="tablink" onclick="openPage('About', this, 'orange')">World</button>
 
 <div id="Home" class="tabcontent">
-  <p><iframe width="100%" height="2500" src="https://datastudio.google.com/u/0/reporting/1a577728-2f31-433e-ac47-df97ae1a0f62/page/NGrzB?s=kViHurPSAjw" frameborder="0" style="border:0" allowfullscreen></iframe></p>
+  <p><iframe width="100%" height="2500" src="https://datastudio.google.com/embed/reporting/1a577728-2f31-433e-ac47-df97ae1a0f62/page/NGrzB" frameborder="0" style="border:0" allowfullscreen></iframe></p>
 </div>
 
 <div id="News" class="tabcontent">
