--- a/covid-19.html
+++ b/covid-19.html
@@ -194,7 +194,7 @@ body, html {
                 <script src="https://public.flourish.studio/resources/embed.js"></script>
                 <p style="font-size:14px">by Amerudin Abdul Ghani, BPPD</p>
             </div>
-            <div width="100%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1777563">
+            <!--<div width="100%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1777563">
                 <script src="https://public.flourish.studio/resources/embed.js"></script>
                 <p style="font-size:14px" </div>
                     <div width="100%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1777629">
@@ -205,12 +205,12 @@ body, html {
                                 <iframe width="100%" height="600" src="https://ukkdosm.github.io/maps/HC-malaysia.html" frameborder="0" style="border:0" allowfullscreen></iframe>
 				    <!--<h3>Heatmap CoViD-19 Cases Reported in Malaysia</h3>
                                 <iframe width="100%" height="600" src="#" frameborder="0" style="border:0" allowfullscreen></iframe>
-                                <p style="font-size:14px">Source: Crisis Preparedness and Response Centre, KKM.</p><br>//-->
+                                <p style="font-size:14px">Source: Crisis Preparedness and Response Centre, KKM.</p><br>//
 
                                 <iframe title="Reported patient location CoVID-19 in Malaysia" aria-label="Malaysia state Symbol map" src="//datawrapper.dwcdn.net/tcfj8/2/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="604"></iframe>
                                 <p style="font-size:14px">Source: Crisis Preparedness and Response Centre, KKM.</p><br><br>
                             </center>
-                    </div>
+                    </div>-->
         </center></p>
 </div>
 
