--- a/covid-19.html
+++ b/covid-19.html
@@ -33,6 +33,8 @@
   gtag('config', 'UA-155273911-1');
 </script>
 <style>
+html body {width: 100%;height: 100%;padding: 0px;margin: 0px;overflow: hidden;font-family: arial;font-size: 10px;color: #6e6e6e;background-color: #000;} #preview-frame {width: 100%;background-color: #fff;}
+	
 * {box-sizing: border-box}
 
 /* Set height of body and the document to 100% */
@@ -178,7 +180,8 @@ body, html {
 	 	  <!--<iframe width="600" height="400" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT6C2FiXaoHBk1t85LgWzviqnecQwheGLHRaQI9FW4vggMLQ_GmrD_QBAHzQ_WtuNmS4YWcKcNGfWK1/pubchart?oid=934330152&amp;format=interactive"></iframe>
           	  <iframe width="600" height="400" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT6C2FiXaoHBk1t85LgWzviqnecQwheGLHRaQI9FW4vggMLQ_GmrD_QBAHzQ_WtuNmS4YWcKcNGfWK1/pubchart?oid=1809011918&amp;format=interactive"></iframe>
 		  <center><iframe width="900" height="400" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT6C2FiXaoHBk1t85LgWzviqnecQwheGLHRaQI9FW4vggMLQ_GmrD_QBAHzQ_WtuNmS4YWcKcNGfWK1/pubchart?oid=555449063&amp;format=interactive"></iframe></center>-->
-	  	  <iframe src='https://covid-msia2021.netlify.app/covid_pop100k.html' frameborder='0' scrolling='no' style='width:1000px;height:600px;'></iframe>
+	  	  <!--<iframe src='https://covid-msia2021.netlify.app/covid_pop100k.html' frameborder='0' scrolling='no' style='width:1000px;height:600px;'></iframe>-->
+	  <iframe id="preview-frame" src="https://covid-msia2021.netlify.app/covid_pop100k.htm" name="preview-frame" frameborder="0" noresize="noresize">
 		  <br>
 		  <iframe src='https://flo.uri.sh/visualisation/1985060/embed' frameborder='0' scrolling='no' style='width:600px;height:400px;'></iframe>
 		  <iframe src='https://flo.uri.sh/visualisation/1797801/embed' frameborder='0' scrolling='no' style='width:600px;height:400px;'></iframe>
@@ -247,6 +250,20 @@ function closeNav() {
   document.getElementById("mySidenav").style.width = "0";
   document.getElementById("main").style.marginLeft= "0";
 }
+	
+	var calcHeight = function() {
+           $('#preview-frame').height($(window).height());
+         }
+
+         $(document).ready(function() {
+           calcHeight();
+         }); 
+
+         $(window).resize(function() {
+           calcHeight();
+         }).load(function() {
+           calcHeight();
+         });
 
 </script>
    
