--- a/covid-19.html
+++ b/covid-19.html
@@ -182,11 +182,11 @@ body, html {
 	  	  <!--<iframe src='https://covid-msia2021.netlify.app/covid_pop100k.html' frameborder='0' scrolling='no' style='width:1000px;height:600px;'></iframe>-->
 	  <iframe id="preview-frame" src="https://covid-msia2021.netlify.app/covid_pop100k.htm" scrolling='no' frameborder="0" noresize="noresize">
 		  <br>
-		  <iframe src='https://flo.uri.sh/visualisation/1985060/embed' frameborder='0' scrolling='no' style='width:600px;height:400px;'></iframe>
-		  <iframe src='https://flo.uri.sh/visualisation/1797801/embed' frameborder='0' scrolling='no' style='width:600px;height:400px;'></iframe>
+		  <iframe id="preview-frame" src='https://flo.uri.sh/visualisation/1985060/embed' frameborder='0' scrolling='no' style='width:600px;height:400px;'></iframe>
+		  <iframe id="preview-frame" src='https://flo.uri.sh/visualisation/1797801/embed' frameborder='0' scrolling='no' style='width:600px;height:400px;'></iframe>
 		<br>
-	    <center><iframe src='https://flo.uri.sh/visualisation/1993601/embed' frameborder='0' scrolling='no' style='width:1000px;height:600px;'></iframe>
-		  <iframe src='https://flo.uri.sh/visualisation/1993540/embed' frameborder='0' scrolling='no' style='width:1000px;height:600px;'></iframe></center>
+	    <center><iframe id="preview-frame" src='https://flo.uri.sh/visualisation/1993601/embed' frameborder='0' scrolling='no' style='width:1000px;height:600px;'></iframe>
+		  <iframe id="preview-frame" src='https://flo.uri.sh/visualisation/1993540/embed' frameborder='0' scrolling='no' style='width:1000px;height:600px;'></iframe></center>
 	
 </div>
 
