--- a/covid-19.html
+++ b/covid-19.html
@@ -180,13 +180,13 @@ body, html {
           	  <iframe width="600" height="400" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT6C2FiXaoHBk1t85LgWzviqnecQwheGLHRaQI9FW4vggMLQ_GmrD_QBAHzQ_WtuNmS4YWcKcNGfWK1/pubchart?oid=1809011918&amp;format=interactive"></iframe>
 		  <center><iframe width="900" height="400" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT6C2FiXaoHBk1t85LgWzviqnecQwheGLHRaQI9FW4vggMLQ_GmrD_QBAHzQ_WtuNmS4YWcKcNGfWK1/pubchart?oid=555449063&amp;format=interactive"></iframe></center>-->
 	  	  <!--<iframe src='https://covid-msia2021.netlify.app/covid_pop100k.html' frameborder='0' scrolling='no' style='width:1000px;height:600px;'></iframe>-->
-	  <iframe id="preview-frame" src="https://covid-msia2021.netlify.app/covid_pop100k.htm" scrolling='no' frameborder="0" noresize="noresize">
+	  <iframe id="preview-frame" src="https://covid-msia2021.netlify.app/covid_pop100k" scrolling='no' frameborder="0" noresize="noresize">
 		  <br>
-		  <iframe id="preview-frame" src='https://flo.uri.sh/visualisation/1985060/embed' frameborder='0' scrolling='no' style='width:600px;height:400px;'></iframe>
-		  <iframe id="preview-frame" src='https://flo.uri.sh/visualisation/1797801/embed' frameborder='0' scrolling='no' style='width:600px;height:400px;'></iframe>
+		  <iframe id="preview-frame" src='https://flo.uri.sh/visualisation/1985060/embed' scrolling='no' frameborder="0" noresize="noresize"></iframe>
+		  <iframe id="preview-frame" src='https://flo.uri.sh/visualisation/1797801/embed' scrolling='no' frameborder="0" noresize="noresize"></iframe>
 		<br>
-	    <center><iframe id="preview-frame" src='https://flo.uri.sh/visualisation/1993601/embed' frameborder='0' scrolling='no' style='width:1000px;height:600px;'></iframe>
-		  <iframe id="preview-frame" src='https://flo.uri.sh/visualisation/1993540/embed' frameborder='0' scrolling='no' style='width:1000px;height:600px;'></iframe></center>
+	    <center><iframe id="preview-frame" src='https://flo.uri.sh/visualisation/1993601/embed' scrolling='no' frameborder="0" noresize="noresize"></iframe>
+		  <iframe id="preview-frame" src='https://flo.uri.sh/visualisation/1993540/embed' scrolling='no' frameborder="0" noresize="noresize"></iframe></center>
 	
 </div>
 
