--- a/covid-19.html
+++ b/covid-19.html
@@ -182,11 +182,11 @@ body, html {
 	  	  <!--<iframe src='https://covid-msia2021.netlify.app/covid_pop100k.html' frameborder='0' scrolling='no' style='width:1000px;height:600px;'></iframe>-->
 	  <iframe id="preview-frame" src="https://covid-msia2021.netlify.app/covid_pop100k" scrolling='no' frameborder="0" noresize="noresize" style='width:100%;height:600px;'>
 		  <br>
-		  <iframe id="preview-frame" src='https://flo.uri.sh/visualisation/1985060/embed' scrolling='no' frameborder="0" noresize="noresize" style='width:100%;height:600px;'></iframe>
-		  <iframe id="preview-frame" src='https://flo.uri.sh/visualisation/1797801/embed' scrolling='no' frameborder="0" noresize="noresize" style='width:100%;height:600px;'></iframe>
-		<br>
-	    <center><iframe id="preview-frame" src='https://flo.uri.sh/visualisation/1993601/embed' scrolling='no' frameborder="0" noresize="noresize" style='width:100%;height:600px;'></iframe>
-		  <iframe id="preview-frame" src='https://flo.uri.sh/visualisation/1993540/embed' scrolling='no' frameborder="0" noresize="noresize" style='width:100%;height:600px;'></iframe></center>
+		  <!--<iframe id="preview-frame" src='https://flo.uri.sh/visualisation/1985060/embed' scrolling='no' frameborder="0" noresize="noresize" style='width:100%;height:600px;'></iframe>-->
+		  <iframe id="preview-frame" src='https://flo.uri.sh/visualisation/1641110/embed' scrolling='no' frameborder="0" noresize="noresize" style='width:100%;height:600px;'></iframe>
+	    <iframe id="preview-frame" src='https://flo.uri.sh/visualisation/1985060/embed' scrolling='no' frameborder="0" noresize="noresize" style='width:100%;height:600px;'></iframe>
+		  <iframe id="preview-frame" src='https://flo.uri.sh/visualisation/5014644/embed' scrolling='no' frameborder="0" noresize="noresize" style='width:100%;height:600px;'></iframe></center>
+	  <iframe id="preview-frame" src='https://flo.uri.sh/visualisation/5014589/embed' scrolling='no' frameborder="0" noresize="noresize" style='width:100%;height:600px;'></iframe></center>
 	
 </div>
 
@@ -196,6 +196,7 @@ body, html {
                 <script src="https://public.flourish.studio/resources/embed.js"></script>
                 <p style="font-size:14px">by Amerudin Abdul Ghani, BPPD</p>
             </div>
+	  <iframe id="preview-frame" src='https://flo.uri.sh/visualisation/2433826/embed' scrolling='no' frameborder="0" noresize="noresize" style='width:100%;height:600px;'></iframe></center>
             <!--<div width="100%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1777563">
                 <script src="https://public.flourish.studio/resources/embed.js"></script>
                 <p style="font-size:14px" </div>
