--- a/covid-19.html
+++ b/covid-19.html
@@ -179,8 +179,8 @@ body, html {
 	  <iframe id="preview-frame" src="https://covid-msia2021.netlify.app/covid_pop100k" scrolling='no' frameborder="0" noresize="noresize" style='width:100%;height:600px;'>
 	  <iframe id="preview-frame" src='https://flo.uri.sh/visualisation/1641110/embed' scrolling='no' frameborder="0" noresize="noresize" style='width:100%;height:600px;'></iframe>
 	    <iframe id="preview-frame" src='https://flo.uri.sh/visualisation/1985060/embed' scrolling='no' frameborder="0" noresize="noresize" style='width:100%;height:600px;'></iframe>
-		  <div><iframe id="preview-frame" src='https://flo.uri.sh/visualisation/5014644/embed' scrolling='no' frameborder="0" noresize="noresize" style='width:50%;height:800px;'></iframe></center>
-	  <iframe id="preview-frame" src='https://flo.uri.sh/visualisation/5014589/embed' scrolling='no' frameborder="0" noresize="noresize" style='width:50%;height:800px;'></iframe></center></div>
+		  <iframe id="preview-frame" src='https://flo.uri.sh/visualisation/5014644/embed' scrolling='no' frameborder="0" noresize="noresize" style='width:100%;height:800px;'></iframe></center>
+	  <iframe id="preview-frame" src='https://flo.uri.sh/visualisation/5014589/embed' scrolling='no' frameborder="0" noresize="noresize" style='width:100%;height:800px;'></iframe></center>
 	
 </div>
 
